--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@types/jest": "^25.1.3",
+    "@types/mocha": "^7.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
